Fix dropdown appearance on Firefox

--- a/src/TimePicker.less
+++ b/src/TimePicker.less
@@ -56,6 +56,10 @@
           padding-left: calc(~"1px + " @digit-width);
         }
       }
+
+      &__amPm {
+        -moz-appearance: menulist;
+      }
     }
 
     &__icon {
